--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,21 +3,26 @@ name = "jonmo"
 version = "0.1.5"
 edition = "2024"
 categories = ["asynchronous", "gui", "game-development"]
-description = "Bevy-native functional reactive signals"
+description = "ergonomic Bevy-native reactivity powered by FRP signals"
 exclude = ["assets/", ".github/", "crates/"]
 keywords = ["reactive", "signals", "gamedev", "bevy"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/databasedav/jonmo"
 documentation = "https://docs.rs/jonmo"
 
+[lints.rust]
+missing_docs = "warn"
+unsafe_code = "deny"
+
 [dependencies]
-bevy_ecs = "0.16.0"
-bevy_reflect = "0.16.0"
-bevy_log = "0.16.0"
-bevy_app = "0.16.0"
-bevy_derive = "0.16.0"
-bevy_time = "0.16.0"
+bevy_app = { version = "0.16", default-features = false }
+bevy_derive = { version = "0.16", default-features = false }
+bevy_ecs = { version = "0.16", default-features = false }
+bevy_log = { version = "0.16", default-features = false }
+bevy_platform = { version = "0.16", default-features = false }
+bevy_time = { version = "0.16", default-features = false }
 enclose = "1.2"
+dyn-clone = "1.0"
 
 [dev-dependencies]
 bevy = "0.16.0"
