--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,5 @@
+edition = "2024"
+
 max_width = 120
 # from bevy
 use_field_init_shorthand = true
@@ -10,4 +12,4 @@ trailing_comma = "Vertical"
 imports_granularity = "Crate"
 wrap_comments = true
 comment_width = 100
-normalize_comments = true
+
