--- a/.github/workflows/pr_previews.yaml
+++ b/.github/workflows/pr_previews.yaml
@@ -69,6 +69,7 @@ jobs:
         commit-message: https://github.com/databasedav/haalka/pull/${{ github.event.number }}/commits/${{ github.event.pull_request.head.sha }}
         folder: pages
         force: false
+        single-commit: true
         target-folder: pr_previews/${{ github.event.number }}
   deployment_comment:
     name: deployment_comment
