--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,7 @@
 edition = "2024"
 
 max_width = 120
+format_code_in_doc_comments = true
 # from bevy
 use_field_init_shorthand = true
 newline_style = "Unix"
