--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/jonmo"
 [dependencies]
 bevy_app = { version = "0.17", default-features = false }
 bevy_derive = { version = "0.17", default-features = false }
+bevy_diagnostic = { version = "0.17", default-features = false }
 bevy_ecs = { version = "0.17", default-features = false }
 bevy_platform = { version = "0.17", default-features = false }
 bevy_log = { version = "0.17", default-features = false, optional = true }
