more changes for haalka bevy 0.17 (#28)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/jonmo"
 [dependencies]
 bevy_app = { version = "0.17", default-features = false }
 bevy_derive = { version = "0.17", default-features = false }
+bevy_diagnostic = { version = "0.17", default-features = false }
 bevy_ecs = { version = "0.17", default-features = false }
 bevy_platform = { version = "0.17", default-features = false }
 bevy_log = { version = "0.17", default-features = false, optional = true }
@@ -26,7 +27,7 @@ document-features = { version = "0.2", optional = true }
 [features]
 default = ["builder", "tracing", "time", "std"]
 
-## Enables access to jonmo's high-level entity builder, [`JonmoBuilder`](https://docs.rs/jonmo/latest/jonmo/builder/struct.JonmoBuilder.html).
+## Enables access to jonmo's high-level entity builder, [`jonmo::Builder`](https://docs.rs/jonmo/latest/jonmo/builder/struct.Builder.html).
 builder = []
 
 ## Enables access to signal ext `.debug` methods, which conveniently logs signal outputs at any step.
