--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,16 @@ repository = "https://github.com/databasedav/jonmo"
 documentation = "https://docs.rs/jonmo"
 
 [dependencies]
-bevy_app = { version = "0.17", default-features = false }
-bevy_derive = { version = "0.17", default-features = false }
-bevy_diagnostic = { version = "0.17", default-features = false }
-bevy_ecs = { version = "0.17", default-features = false }
-bevy_platform = { version = "0.17", default-features = false }
-bevy_log = { version = "0.17", default-features = false, optional = true }
-bevy_time = { version = "0.17", default-features = false, optional = true }
+bevy_app = { version = "0.18", default-features = false }
+bevy_derive = { version = "0.18", default-features = false }
+bevy_diagnostic = { version = "0.18", default-features = false }
+bevy_ecs = { version = "0.18", default-features = false }
+bevy_platform = { version = "0.18", default-features = false }
+bevy_log = { version = "0.18", default-features = false, optional = true }
+bevy_time = { version = "0.18", default-features = false, optional = true }
 enclose = "1.2"
 dyn-clone = "1.0"
-apply = "0.3"
+apply = "=0.3.0"  # locked because last released in 2020
 cfg-if = "1.0"
 document-features = { version = "0.2", optional = true }
 
@@ -64,7 +64,7 @@ web = [
 deployed_wasm_example = []
 
 [dev-dependencies]
-bevy = { version = "0.17", features = ["track_location"] }
+bevy = { version = "0.18", features = ["track_location"] }
 rand = "0.9"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 
